name:                scheme48
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/alexmacedo/scheme48#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandre Macedo
maintainer:          alexbmac@gmail.com
copyright:           2016 Alexandre Macedo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scheme48
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       mtl
